==> miniwinwm/miniwinwm/Renesas/RX65N/MiniWinCamera/src/camlib.c <==
#include <stdbool.h>
#include <stdint.h>
#include "iodefine.h"
#define _00_TMR_CNT_CLR_DISABLE                     (0x00U) /* Clearing is disabled */
#define _08_TMR_CNT_CLR_COMP_MATCH_A                (0x08U) /* Cleared by compare match A */
#define _00_TMR_CMIA_INT_DISABLE                    (0x00U) /* Compare match A interrupt (CMIAn) are disabled */
#define _00_TMR_CMIB_INT_DISABLE                    (0x00U) /* Compare match B interrupt (CMIBn) are disabled */
#define _00_TMR_OVI_INT_DISABLE                     (0x00U) /* Overflow interrupt requests (OVIn) are disabled */
#define _00_TMR_COMP_MATCH_B_OUTPUT_RETAIN          (0x00U) /* No change */
#define _03_TMR_COMP_MATCH_A_OUTPUT_TOGGLE          (0x03U) /* Toggle output */
#define _F0_TMR13_TCSR_DEFAULT                      (0xF0U) /* Default TCSR write value for TMR1/3 */
#define _01_TMR3_COMP_MATCH_VALUE_A             	(0x01U)
#define _01_TMR3_COMP_MATCH_VALUE_B             	(0x01U)
#define _08_TMR_CLK_SRC_PCLK                        (0x08U) /* Use PCLK */
#define _00_TMR_PCLK_DIV_1                          (0x00U) /* Count at PCLK */
#define BSP_REG_PROTECT_MPC
#define OV7670_WRITE_ADDR 							0x42

static void xclk_init(void)
{
    /* Enable writing to MPC pin function control registers */
    MPC.PWPR.BIT.B0WI = 0U;
    MPC.PWPR.BIT.PFSWE = 1U;

    /* Set TMO3 pin */
    MPC.P55PFS.BYTE = 0x05U;
    PORT5.PMR.BYTE |= 0x20U;

    /* Disable writing to MPC pin function control registers */
    MPC.PWPR.BIT.PFSWE = 0U;
    MPC.PWPR.BIT.B0WI = 1U;

    /* Disable protection */
    SYSTEM.PRCR.WORD = 0xA50BU;

    /* Cancel TMR module stop state */
    MSTP(TMR23) = 0U;

    /* Enable protection */
    SYSTEM.PRCR.WORD = 0xA500U;

    /* Set counter clear and interrupt */
    TMR3.TCR.BYTE = _08_TMR_CNT_CLR_COMP_MATCH_A | _00_TMR_CMIA_INT_DISABLE | _00_TMR_CMIB_INT_DISABLE |
                    _00_TMR_OVI_INT_DISABLE;

    /* Set output */
    TMR3.TCSR.BYTE = _00_TMR_COMP_MATCH_B_OUTPUT_RETAIN | _03_TMR_COMP_MATCH_A_OUTPUT_TOGGLE | _F0_TMR13_TCSR_DEFAULT;

    /* Set compare match value */
    TMR3.TCORA = _01_TMR3_COMP_MATCH_VALUE_A;
    TMR3.TCORB = _01_TMR3_COMP_MATCH_VALUE_B;

    /*Start counting*/
    TMR3.TCCR.BYTE = _08_TMR_CLK_SRC_PCLK | _00_TMR_PCLK_DIV_1;
}

static void sccb_init(void)
{
	/* set up pins in pin controller */

	/* enable writing to MPC */
    MPC.PWPR.BIT.B0WI = 0;
    MPC.PWPR.BIT.PFSWE = 1;

    /* set SSDA2 pin to P50 */
    MPC.P50PFS.BYTE = 0x0AU;

    /* set SSCL2 pin to P52 */
    MPC.P52PFS.BYTE = 0x0AU;

    /* disable writing MPC */
    MPC.PWPR.BIT.PFSWE = 0U;
    MPC.PWPR.BIT.B0WI = 1U;


	/* release SCI2 from stop */
	SYSTEM.PRCR.WORD = 0xa502U;
	SYSTEM.MSTPCRB.BIT.MSTPB29 = 0U;
	SYSTEM.PRCR.WORD = 0xa500U;

	/* disable SCI2 and all its interrupts */
    SCI2.SCR.BYTE = 0U;

	/* set P52 drive capacity control high */
	PORT5.DSCR.BIT.B2 = 1U;

	/* set P52 pull-Up resistor off */
	PORT5.PCR.BIT.B2 = 1U;

	/* set P52 port direction to input */
	PORT5.PDR.BIT.B2 = 0U;

	/* set P52 open-drain to NMOS OD output */
	PORT5.ODR0.BIT.B4 = 1U;

	/* set P52 mode to not GPIO */
    PORT5.PMR.BIT.B2 = 1U;

	/* set P50 drive capacity control high */
	PORT5.DSCR.BIT.B0 = 1U;

	/* set P50 pull-up resistor off */
	PORT5.PCR.BIT.B0 = 1U;

	/* set P50 port direction to input */
	PORT5.PDR.BIT.B0 = 0U;

	/* set P50 open-drain to NMOS OD output */
	PORT5.ODR0.BIT.B0 = 1U;

	/* set P50 mode to not GPIO */
    PORT5.PMR.BIT.B0 = 1U;

	/* place i2c pins in high impedance */
	SCI2.SIMR3.BIT.IICSCLS = 3U;
	SCI2.SIMR3.BIT.IICSDAS = 3U;

    /* clock select */
    SCI2.SMR.BYTE = 0;

    /* msb first */
    SCI2.SCMR.BIT.SDIR = 1U;

    /* no inversion */
    SCI2.SCMR.BIT.SINV = 0U;

    /* not smart card mode */
    SCI2.SCMR.BIT.SMIF = 0U;

    /* baud rate */
    SCI2.BRR = 18U;

    /* set noise filter enable */
    SCI2.SEMR.BIT.NFEN = 1U;

    /* bit rate modulation disable */
    SCI2.SEMR.BIT.BRME = 0U;

    /* noie filter clock select */
    SCI2.SNFR.BIT.NFCS = 1U;

    /* select simple IIC mode */
    SCI2.SIMR1.BIT.IICM = 1U;

    /* set SDA output delay */
    SCI2.SIMR1.BIT.IICDL = 18U;

    /* set reception/transmission of ACK/NACK */
    SCI2.SIMR2.BIT.IICACKT = 1U;

    /* clock synch on */
    SCI2.SIMR2.BIT.IICCSC = 1U;

    /* use tx/rx interrupts */
    SCI2.SIMR2.BIT.IICINTM = 1U;

    /* SPI mode off */
    SCI2.SPMR.BYTE = 0U;

    /* enable tx/tx, txi/rxi and tei (used as start/stop bit generation complete) interrupts although the TEI interrupt is polled */
	SCI2.SCR.BYTE = 0xb4U;

	/* enable group BL0 interupt 4 tei (used as start/stop bit generation complete) interrupt) */
	ICU.GENBL0.BIT.EN4 = 1U;

	/* set up rx interrupt */
	IR(SCI2, RXI2) = 0U;
	IPR(SCI2, RXI2) = 5U;
	IEN(SCI2, RXI2) = 1U;

	/* set up transmit interrupt */
	IR(SCI2, TXI2) = 0U;
	IPR(SCI2, TXI2) = 5U;
	IEN(SCI2, TXI2) = 1U;
}

static void cam_paralell_io_init(void)
{
	PORTC.PMR.BIT.B0 = 0U;	/* mode to gpio */
	PORTC.PDR.BIT.B0 = 0U;	/* input */
	PORTC.PCR.BIT.B0 = 0U;  /* pull-up disable */

	PORTC.PMR.BIT.B1 = 0U;	/* mode to gpio */
	PORTC.PDR.BIT.B1 = 0U;	/* input */
	PORTC.PCR.BIT.B1 = 0U;  /* pull-up disable */

	PORT3.PMR.BIT.B2 = 0U;	/* mode to gpio */
	PORT3.PDR.BIT.B2 = 0U;	/* input */
	PORT3.PCR.BIT.B2 = 0U;  /* pull-up disable */

	PORT3.PMR.BIT.B3 = 0U;	/* mode to gpio */
	PORT3.PDR.BIT.B3 = 0U;	/* input */
	PORT3.PCR.BIT.B3 = 0U;  /* pull-up disable */

	PORTC.PMR.BIT.B4 = 0U;	/* mode to gpio */
	PORTC.PDR.BIT.B4 = 0U;	/* input */
	PORTC.PCR.BIT.B4 = 0U;  /* pull-up disable */

	PORTC.PMR.BIT.B5 = 0U;	/* mode to gpio */
	PORTC.PDR.BIT.B5 = 0U;	/* input */
	PORTC.PCR.BIT.B5 = 0U;  /* pull-up disable */

	PORTC.PMR.BIT.B6 = 0U;	/* mode to gpio */
	PORTC.PDR.BIT.B6 = 0U;	/* input */
	PORTC.PCR.BIT.B6 = 0U;  /* pull-up disable */

	PORT5.PMR.BIT.B1 = 0U;	/* mode to gpio */
	PORT5.PDR.BIT.B1 = 0U;	/* input */
	PORT5.PCR.BIT.B1 = 0U;  /* pull-up disable */

	PORTJ.PMR.BIT.B5 = 0U;	/* mode to gpio */
	PORTJ.PDR.BIT.B5 = 0U;	/* input */
	PORTJ.PCR.BIT.B5 = 0U;  /* pull-up disable */

	PORTB.PMR.BIT.B6 = 0U;	/* mode to gpio */
	PORTB.PDR.BIT.B6 = 0U;	/* input */
	PORTB.PCR.BIT.B6 = 0U;  /* pull-up disable */

	PORTB.PMR.BIT.B7 = 0U;	/* mode to gpio */
	PORTB.PDR.BIT.B7 = 0U;	/* input */
	PORTB.PCR.BIT.B7 = 0U;  /* pull-up disable */
}

void camlib_capture(void)
{
	uint_fast32_t i;

	/* disable all interrupts that are active individually as disabling all interrupts globally via PSW is not possible in user mode */
	IEN(CMT0, CMI0) = 0U;

	/* wait for VS */
	while (PORTB.PIDR.BIT.B6 == 0U)
	{
	}
	while (PORTB.PIDR.BIT.B6 == 1U)
	{
	}
	i = 0UL;

	for (uint_fast8_t y = 0U; y < 120U; y++)
	{
		/* wait for first HS */
		while (PORTB.PIDR.BIT.B7 == 0U)
		{
		}

		while (PORTB.PIDR.BIT.B7 == 1U)
		{
		}

		/* wait for second HS */
		while (PORTB.PIDR.BIT.B7 == 0U)
		{
		}

		for (uint_fast16_t x = 0U; x < 160U; x++)
		{
			/* wait for PLK */
			while (PORTJ.PIDR.BIT.B5 == 0U)
			{
			}

			frame_buffer[i] = PORTC.PIDR.BYTE & 0x73U;
			frame_buffer[i] |= (PORT3.PIDR.BYTE & 0x0cU);
			if (PORT5.PIDR.BIT.B1 == 1U)
			{
				frame_buffer[i] |= 0x80U;
			}
			i++;

			/* wait for ~PLK */
			while (PORTJ.PIDR.BIT.B5 == 1U)
			{
			}

			/* wait for PLK */
			while (PORTJ.PIDR.BIT.B5 == 0U)
			{
			}

			frame_buffer[i] = PORTC.PIDR.BYTE & 0x73U;
			frame_buffer[i] |= (PORT3.PIDR.BYTE & 0x0cU);
			if (PORT5.PIDR.BIT.B1 == 1U)
			{
				frame_buffer[i] |= 0x80U;
			}
			i++;

			/* wait for ~PLK */
			while (PORTJ.PIDR.BIT.B5 == 1U)
			{
			}

			/* repeat doing dummy read */
			while (PORTJ.PIDR.BIT.B5 == 0U)
			{
			}

			while (PORTJ.PIDR.BIT.B5 == 1)
			{
			}

			while (PORTJ.PIDR.BIT.B5 == 0U)
			{
			}

			while (PORTJ.PIDR.BIT.B5 == 1U)
			{
			}
		}
	}

	/* re-enable interrupts */
	IEN(CMT0, CMI0) = 1U;
}
