==> miniwinwm/miniwinwm/ST/STM32F429/MiniWinCamera/src/camlib.c <==
#include <stdbool.h>
#include <stdint.h>
#include "stm32f4xx.h"
#define OV7670_WRITE_ADDR 		0x42U

static void xclk_init(void)
{
	TIM_HandleTypeDef Tim10Handle;
	GPIO_InitTypeDef GPIO_InitStruct;
	TIM_OC_InitTypeDef sConfigOC = {0};

	__HAL_RCC_GPIOF_CLK_ENABLE();
	__HAL_RCC_TIM10_CLK_ENABLE();

	GPIO_InitStruct.Pin = GPIO_PIN_6;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_PULLUP;
	GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStruct.Alternate = GPIO_AF3_TIM10;
	HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

	Tim10Handle.Instance = TIM10;
	Tim10Handle.Init.Prescaler = 0U;
	Tim10Handle.Init.CounterMode = TIM_COUNTERMODE_UP;
	Tim10Handle.Init.Period = 2U;
	Tim10Handle.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
	Tim10Handle.Init.RepetitionCounter = 0U;
	(void)HAL_TIM_Base_Init(&Tim10Handle);
	(void)HAL_TIM_OC_Init(&Tim10Handle);

	sConfigOC.OCMode = TIM_OCMODE_TOGGLE;
	sConfigOC.Pulse = 0U;
	sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
	sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
	(void)HAL_TIM_OC_ConfigChannel(&Tim10Handle, &sConfigOC, TIM_CHANNEL_1);

	(void)HAL_TIM_Base_Start(&Tim10Handle);
	(void)HAL_TIM_OC_Start(&Tim10Handle, TIM_CHANNEL_1);
}

static void cam_paralell_io_init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;

	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();
	__HAL_RCC_GPIOC_CLK_ENABLE();
	__HAL_RCC_GPIOE_CLK_ENABLE();
	__HAL_RCC_GPIOG_CLK_ENABLE();

	GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
	GPIO_InitStruct.Pull = GPIO_NOPULL;

	GPIO_InitStruct.Pin = GPIO_PIN_5;
	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = GPIO_PIN_4;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = GPIO_PIN_11;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = GPIO_PIN_2 | GPIO_PIN_3 | GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_6;
	HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = GPIO_PIN_2 | GPIO_PIN_3 | GPIO_PIN_9;
	HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);
}

static void sccb_init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;

	__HAL_RCC_I2C1_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();

	GPIO_InitStruct.Pin = GPIO_PIN_6 | GPIO_PIN_7;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
	GPIO_InitStruct.Pull = GPIO_PULLUP;
	GPIO_InitStruct.Speed = GPIO_SPEED_MEDIUM;
	GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	hi2c1.Instance = I2C1;
	hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
	hi2c1.Init.OwnAddress1 = 0U;
	hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
	hi2c1.Init.ClockSpeed = 100000U;
	hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
	hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
	hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;

	(void)HAL_I2C_Init(&hi2c1);
}

void camlib_capture(void)
{
	uint_fast32_t i;

	__disable_irq();

	/* wait for VS */
	while (!(GPIOC->IDR & GPIO_PIN_11))
	{
	}
	while ((GPIOC->IDR & GPIO_PIN_11))
	{
	}
	i = 0UL;

	for (uint_fast8_t y = 0U; y < 120U; y++)
	{
		/* wait for first HS */
		while (!(GPIOA->IDR & GPIO_PIN_5))
		{
		}

		while ((GPIOA->IDR & GPIO_PIN_5))
		{
		}

		/* wait for second HS */
		while (!(GPIOA->IDR & GPIO_PIN_5))
		{
		}

		for (uint_fast16_t x = 0U; x < 160U; x++)
		{
			/* wait for PLK */
			while (!(GPIOB->IDR & GPIO_PIN_4))
			{
			}

			frame_buffer[i] = (uint8_t)GPIOE->IDR & 0b01111100U;
			frame_buffer[i] |= (uint8_t)(GPIOG->IDR >> 2) & 0b10000011U;
			i++;

			/* wait for ~PLK */
			while ((GPIOB->IDR & GPIO_PIN_4))
			{
			}

			/* wait for PLK */
			while (!(GPIOB->IDR & GPIO_PIN_4))
			{
			}

			frame_buffer[i] = (uint8_t)GPIOE->IDR & 0b01111100U;
			frame_buffer[i] |= (uint8_t)(GPIOG->IDR >> 2) & 0b10000011U;
			i++;

			/* wait for ~PLK */
			while ((GPIOB->IDR & GPIO_PIN_4))
			{
			}

			/* repeat ignoring read */
			while (!(GPIOB->IDR & GPIO_PIN_4))
			{
			}

			while ((GPIOB->IDR & GPIO_PIN_4))
			{
			}

			while (!(GPIOB->IDR & GPIO_PIN_4))
			{
			}

			while ((GPIOB->IDR & GPIO_PIN_4))
			{
			}
		}
	}

	__enable_irq();
}
